[metadata]
name = datamin
version = 0.0.1
author = Anonymous Authors
author_email = anonymized
description = A data minimization package
long_description = file: README.md
long_description_content_type = text/markdown
url = anonymized

[options]
package_dir =
    = datamin
packages = find:
python_requires = >=3.6

[options.packages.find]
where = datamin

[isort]
line_length = 88
multi_line_output=3
include_trailing_comma=true
known_comet=comet_ml
sections=FUTURE,STDLIB,COMET,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[flake8]
ignore = E203, E501, W503, F403
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[mypy]
exclude = datamin/minimizers/ibm_apt_core
python_version = 3.7
disallow_untyped_defs = True
disallow_any_unimported = False
no_implicit_optional = True
check_untyped_defs = True
warn_return_any = False
warn_unused_ignores = True
show_error_codes = True
ignore_missing_imports = True
